# DataEngineer

./: .gitignore  README.md  log.py  main.py  pyproject.toml  setime.cmd
Menumatcher/dev/: Matcherwritethisfileonly.py  Matchmenudemo.py  Validatedup.py  main.py  testpythailp.py  tokenize_testmain.py
modules/Menumatcher/dev/: Matcherdemo.py  Matchmenudemo2.py  main.py
modules/Menumatcher/stable/v1_1_0/: Matchermenu3.py
modules/bq_uploader/dev/: load_data_to_big_query.py
modules/cleansing_data/: __init__.py
modules/cleansing_data/dev/: cleandev.py
modules/cleansing_data/stable/: __init__.py
modules/cleansing_data/stable/V3_0_0/: Classclean.py  __init__.py
modules/cleansing_data/stable/v1_0_0/: Cleansing.py  Cleanver01.py  Funcleansing.py  SandBox.py  merge.py  regexdemo.py
modules/cleansing_data/stable/v2_0_0/: Classdemo.py
modules/cleansing_data/stable/v3_2_0/: CLasscleanv3.py  __init__.py
modules/file_checker/: file_checker.py
modules/gen_id/: generate_id.py
modules/splittable/: split.py
tests/: test_cleaning.py  test_file_checker.py  test_foodmatch.py  test_generate_id.py  test_split.py  test_utils.py
utlis/: __init__.py  utlis.py
