[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "theme.theo",email = "100015945+Theokmutt@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pysftp (>=0.2.9,<0.3.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "google-cloud-bigquery (>=3.29.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


