[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["theme.theo <100015945+Theokmutt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
pysftp = "^0.2.9"
psycopg2 = "^2.9.10"
google-cloud-bigquery = "^3.29.0"
tqdm = "^4.67.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"
rapidfuzz = "^3.13.0"
pythainlp = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
